--- a/includes/style.css
+++ b/includes/style.css
@@ -6,6 +6,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #FFFFFF;
 	margin: 0;
+	padding: 0;
 }
 h3 {
 	display: block;
