--- a/includes/style.css
+++ b/includes/style.css
@@ -1283,7 +1283,7 @@ td.lbl {
 	top: 5%;
 	left: 5%;
 	width: 65%;
-	max-height: 450px;
+	max-height: auto;
 	background-color: white;
 	overflow: auto;
 }
@@ -1592,7 +1592,6 @@ ul.sf-menu li li li.sfHover ul {
 	margin-bottom:	.1em;
 }
 .sf-menu a {
-	border-left:	1px solid #fff;
 	border-top:		1px solid #CFDEFF;
 	padding: 		.45em 2em;
 	text-decoration:none;
@@ -3171,6 +3170,7 @@ table.bottom_band {
 	margin-top: -2px;
 	padding: 5px 5px 0 5px;
 	background-color: #339999;
+    background-color:#fff;
 }
 .recordcount {
 	height: 16px;
@@ -3242,7 +3242,7 @@ div.topBlock {
     margin-top:5em;
 	width: 500px;
 	float: left;
-	position: relative;
+	/*position: relative;*/
 	font-family: Arial, sans-serif;
 }
 .shell h2 {
@@ -3310,7 +3310,7 @@ div.topBlock {
 	box-shadow: 10px 10px 29px -14px rgba(102,102,102,1);
 }
 div.updatedAtom p {
-	margin: 8px 10px;
+	margin: 4px 10px 8px;
 }
 .authorAtom {
 	position: absolute;
@@ -3361,7 +3361,7 @@ div.updatedAtom p {
 	border-radius: 5px 5px 5px 5px;
 	-moz-border-radius: 5px 5px 5px 5px;
 	-webkit-border-radius: 5px 5px 5px 5px;
-	border: 2px solid #666;
+	border: 1px solid #666;
 	padding: 2px 5px;
 	cursor: pointer;
 }
@@ -3369,7 +3369,7 @@ div.updatedAtom p {
 	border-radius: 5px 5px 5px 5px;
 	-moz-border-radius: 5px 5px 5px 5px;
 	-webkit-border-radius: 5px 5px 5px 5px;
-	border: 2px solid #FF0000;
+	border: 1px solid #FF0000;
 	padding: 2px 5px;
 	cursor: pointer;
 }
@@ -3377,7 +3377,7 @@ div.updatedAtom p {
 	border-radius: 5px 5px 5px 5px;
 	-moz-border-radius: 5px 5px 5px 5px;
 	-webkit-border-radius: 5px 5px 5px 5px;
-	border: 2px solid #666;
+	border: 1px solid #666;
 	padding: 3px 5px;
 	cursor: pointer;
 }
@@ -3385,7 +3385,7 @@ div.updatedAtom p {
 	border-radius: 5px 5px 5px 5px;
 	-moz-border-radius: 5px 5px 5px 5px;
 	-webkit-border-radius: 5px 5px 5px 5px;
-	border: 2px solid #FF0000;
+	border: 1px solid #FF0000;
 	padding: 3px 5px;
 	cursor: pointer;
 }
@@ -3393,16 +3393,16 @@ div.updatedAtom p {
 	border-radius: 5px 5px 5px 5px;
 	-moz-border-radius: 5px 5px 5px 5px;
 	-webkit-border-radius: 5px 5px 5px 5px;
-	border: 2px solid #666;
-	padding: 2px 5px;
+	border: 1px solid #666;
+	padding: 1px 5px;
 	cursor: pointer;
 }
 #loan td .qutBtn:hover {
 	border-radius: 5px 5px 5px 5px;
 	-moz-border-radius: 5px 5px 5px 5px;
 	-webkit-border-radius: 5px 5px 5px 5px;
-	border: 2px solid #444;
-	padding: 2px 5px;
+	border: 1px solid #444;
+	padding: 1px 5px;
 	cursor: pointer;
 }
 header {
@@ -3437,7 +3437,7 @@ header .download {
 	display: inline-block;
 	width: auto;
 	margin: 4px 5px 4px 10px;
-	border: 2px solid #ccc;
+	border: 1px solid #ccc;
 	padding: 3px 6px;
 	-moz-border-radius: 5px 5px 5px 5px;
 	-webkit-border-radius: 5px 5px 5px 5px;
@@ -3505,7 +3505,7 @@ header .download a:hover {
 	background-color: #ccc;
 }
 ul.loan_buttons {
-	width: 88.5%;
+	width: 75.5%;
 	font-size: 94%;
 	margin-bottom: 1em;
 	text-align: right;
@@ -3518,7 +3518,7 @@ ul.loan_buttons li {
 	display: inline-block;
 	width: auto;
 	margin: 4px 5px 4px 0;
-	border: 2px solid #ccc;
+	border: 1px solid #ccc;
 	padding: 3px 6px;
 	-moz-border-radius: 5px 5px 5px 5px;
 	-webkit-border-radius: 5px 5px 5px 5px;
@@ -3528,7 +3528,7 @@ ul.loan_buttons li {
 	box-sizing: border-box;
 }
 ul.loan_buttons li:hover {
-	border: 2px solid #666;
+	border: 1px solid #666;
 }
 ul.loan_buttons li a:hover {
 	color: #666;
@@ -3548,7 +3548,7 @@ ul.loan_buttons li.edit {
 	background-color: #9cf;
 }
 ul.loan_buttons li.edit:hover, ul.loan_buttons li.add:hover, ul.loan_buttons li.barcode:hover {
-	border: 2px solid #666;
+	border: 1px solid #666;
 }
 ul.lisc {
 	-webkit-padding-start: 5px;
@@ -3742,10 +3742,10 @@ ul.pubLinks {
 	margin-bottom: 1em;
     padding: 2em 0 3em 0;
 }
-.basic_box p {
+/*  .basic_box p {
     line-height: 1.2em;
     padding: 1em 0;
-}
+}--*/
 .basic_search_box a.toplinks {display:inline-block; float: left; width:auto; padding-right: 1em;}
 .basic_box_media
 .basic_box_media table {width:100%;}
@@ -3966,7 +3966,7 @@ p.spacer {height: 3px;}
 }
 
 #relationships input, #labels input {
-	width: 73%;
+	/*width: 73%;*/
 }
 input#keyword {
 	width: 60%;
@@ -4463,7 +4463,7 @@ line-height: 1.2em;}
 .editMedia2 label {margin-top: .65em;}
 
 table.attributes {font-size: 10px;}
-table.pubtable td {border-top: 1px solid gray; border-bottom: 1px solid gray;padding: 3px 0;}
+table.pubtable td { border-bottom: 1px solid gray;padding: 2px 1px;}
 
 
 @media only screen and (max-width: 1800px) {
@@ -4611,7 +4611,7 @@ table.pubtable td {border-top: 1px solid gray; border-bottom: 1px solid gray;pad
 }
 #attTab td {border: 1px dotted #ccc;}
 #relationships input, #labels input {
-	width: 73%;
+	/*width: 73%;*/
 }
 input#keyword {
 	width: 60%;
@@ -4814,7 +4814,7 @@ table.navtabs {
 
 
 #dataentry_form {
-        width: 121em;
+    width: auto;
     margin: 0 auto;
       font-size: 11px;
 }
@@ -4836,10 +4836,6 @@ table.navtabs {
 }
 #theTable h3.wikilink {width: auto;}
 
-#theTable {
-
-    
-}
 #theTable td, #theTable tr, theTable input{padding:0px;
     margin:0;
 }
@@ -4940,7 +4936,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b58aa5', end
 .isEnter {
 	border:none;
 	background-color:#bed88f;
-    padding: 1em;
+    padding: 0em;
 }
 .hasProbs {
 	background-color:#FF0000;
@@ -4953,9 +4949,8 @@ div#modeDisplayDiv {
     color: gray;
     font-size: 15px;
     background-color: white;
-    width: 100%;
-       padding: 3px 0px;
-   
+    padding: 3px 1%;
+    margin-bottom: 5px;
 }
 div#loadedMsgDiv {
     color:red;
@@ -4975,109 +4970,7 @@ ul.labels li {margin-left: 1.5em;padding: .25em 0;}
 ul.labels ul {list-style: circle;}
 #labels2 label {padding-top: .32em;}
 
-/***data entry form ****/
-/*
 
-#theTable {width: 100%;}
-.de_lefthalf {
-    width: 40%;
-}
-.de_righthalf {
-    width: 40%;
-}
-.bottomDEtable{
-    width:80%;
-}
-#loadingAnimation{
-	position:fixed;
-	top:50%;
-	left:40%;
-	padding:5px;
-	z-index:2001;
-}
-#loadedMsgDiv{display:none;}
-.isGoodEdit {
-	background-color:#00CCCC;
-}
-.isBadEdit, isBadEdit tr:nth-child(even) {
-        background-color: #FF6EC7;
-        background-color: #B58AA5;
-        background: #b58aa5; 
-}
-.isBadEdit, isBadEdit tr:nth-child(odd) {
-        background: #b8d1f3;
-        background: #cecece;
-        background: #d5b9ca;
-        background: #b58aa5;
-        background: -moz-linear-gradient(top, #b58aa5 58%, #d5b9ca 100%); 
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(58%, #b58aa5), color-stop(100%, #d5b9ca)); 
-        background: -webkit-linear-gradient(top, #b58aa5 58%, #d5b9ca 100%);
-        background: -o-linear-gradient(top, #b58aa5 58%, #d5b9ca 100%);
-        background: -ms-linear-gradient(top, #b58aa5 58%, #d5b9ca 100%); 
-        background: linear-gradient(to bottom, #b58aa5 58%, #d5b9ca 100%); 
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b58aa5', endColorstr='#d5b9ca', GradientType=0 ); 
-}
-.isEnter {
-	border:none;
-	background-color:#bed88f;
-}
-
-
-.bad{
-    color:red;
-}
-.good{
-    color:green;
-}
-
-.firstOfRow {
-    float: left;
-    width: 100px;
-}
-
-.noShow {
-	display:none;
-}
-.doShow {
-}
-
-.hasProbs {
-	background-color:#FF0000;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:11px;
-}
-.fs {
-	border: 2px ridge #669999;
-	padding:1px;
-	margin:1px;
-}
-
-.err {
-	width:100%;
-	text-align:center;
-	border:1px solid red;
-	font-size:small;
-}
-.f11b {
-        float: left;
-        padding-right: 1em;
-        padding-left: 1em;
-        font-size: 11px;
-        padding-right: 2px;
-        padding-top: 1em;
-}
-
-table.collector input.reqdClr {
-        width: 142px;
-}
-table.collector select.reqdClr {
-        width: 80px;
-}
-table.geotable select {
-        width: 110px;
-}
-*/
-/*** Below: Used for Part Attribute button and popup  ***/
 input.part_at {
         width: 83px;
         float: left;
@@ -5109,19 +5002,185 @@ a.part_att_btn {
         background-color:#a9c9fd;
         display: block;
         padding:1px 5px;
-        margin: 0;
         border: 1px solid #666;
         cursor:pointer;
         text-align:center;
         width: auto;
-    margin-left: 1px;
+        margin-left: 1px;
 }
 table.bottom_band {
     padding-bottom: 3px;
     width:100%;
     margin-left:-.02em;
-    border: 2px solid gray;
+    border: 2px solid green;
+    background-color: beige;
 }
 table.botton_band a {font-size: 15px;}
+
+/*input {
+        width: auto;
+}*/
+input.reqdClr {
+        width: auto;
+}
+#loadingAnimation{
+	position:fixed;
+	top:50%;
+	left:40%;
+	padding:5px;
+	z-index:2001;
+}
+#theTable label {
+	display:inline;
+	font-size:11px;
+	font-weight:400;
+	padding-right:.01em;
+}
+#loadedMsgDiv{display:none;}
+.isGoodEdit {
+	background-color:#00CCCC;
+}
+.isBadEdit, isBadEdit tr:nth-child(even) {
+        background-color: #FF6EC7;
+        background-color: #B58AA5;
+        background: #b58aa5; /* Old browsers */
+	background-color:#c192ae;
+/*	background-color:#c9B3C0;*/
+}
+.isBadEdit, isBadEdit tr:nth-child(odd) {
+        background: #b8d1f3;
+        background: #cecece;
+        background: #d5b9ca;
+        background: #b58aa5; /* Old browsers */
+        background: -moz-linear-gradient(top, #b58aa5 58%, #d5b9ca 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(58%, #b58aa5), color-stop(100%, #d5b9ca)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top, #b58aa5 58%, #d5b9ca 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top, #b58aa5 58%, #d5b9ca 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(top, #b58aa5 58%, #d5b9ca 100%); /* IE10+ */
+        background: linear-gradient(to bottom, #b58aa5 58%, #d5b9ca 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b58aa5', endColorstr='#d5b9ca', GradientType=0 ); /* IE6-9 */
+}
+.isEnter {
+	border:none;
+	background-color:#bed88f;
+}
+
+#msg {
+	position:fixed;
+	bottom:0;
+	z-index:10000;
+    margin: 0 auto;
+	text-align:center;
+	font-size:20px;
+	width:8%;
+	border:2px solid black;
+	background-color:white;
+}
+.bad{
+    color:red;
+}
+.good{
+    color:green;
+}
+#theTable input, #theTable select {
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:11px;
+	padding:0px;
+	margin:0px;
+}  
+.firstOfRow {
+    float: left;
+    width: 100px;
+}
+
+.noShow {
+	display:none;
+}
+.doShow {
+	/* normal */
+}
+.f11a {font-family:Arial, Helvetica, sans-serif;
+	font-size:11px;
+	padding-right:2px;
+}
+.hasProbs {
+	background-color:#FF0000;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:11px;
+}
+input:focus, textarea:focus, select:focus {
+	border: 1px solid #FFFF00;
+}
+#theTable .fs {
+	border: 1px ridge #669999;
+	width:100%;
+	padding:.01em;
+	margin:.02em;
+}
+.err {
+	width:100%;
+	text-align:center;
+	border:1px solid red;
+	font-size:small;
+}
+#theTable .f11b {
+        float: left;
+        padding-right: 1em;
+        padding-left: 1em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 11px;
+        padding-right: 2px;
+        padding-top: 1em;
+}
+
+table.collector input.reqdClr {
+        width: 142px;
+}
+table.collector select.reqdClr {
+        width: 80px;
+}
+table.geotable select {
+        width: 110px;
+}
+#theTable textarea {
+        margin: 0 4px;
+}
+/*** Below: Used for Part Attribute button and popup  ***/
+input.part_at {
+        width: 83px;
+        float: left;
+        display: inline;
+}
+.div1 ul {
+        width: 560px;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+}
+.div1 ul li {
+        display: inline;
+        font-size: 10px;
+        float: left;
+        width: 84px;
+        margin: 2px 9px 5px 0px;
+}
+a.part_att_btn {
+        font-size: 12px;
+        font-weight: bold;
+        color: #666;
+        background-color:#a9c9fd;
+        display: block;
+        padding: 0px 3px;
+        border: 1px solid #666;
+        cursor:pointer;
+        text-align:center;
+        width: auto;
+}
+table.bottom_band {
+        padding-bottom: 5px;
+}
+.browsingBulk select, .browsingBulk label {font-size: 16px;}
+.nobull {list-style:none;font-size: 15px;}
+.nobull input {margin-top:0; padding-top:0;font-size: 14px;}
 
 /*** Above: Used for Part Attribute button and popup  ***/
