ISSUE: Redmine 256   PURPOSE:  Style update
Noticed the fonts were not consistent across some of the pages and it
was pointed out that the geography popup window were not big enough.
The agent activity page had lost its formatting somehow so I reinstated
it.  Some other styles were tweaked as well.

--- a/includes/css/mediacontain.css
+++ b/includes/css/mediacontain.css
@@ -4,6 +4,8 @@
 	/* Prevents multizoomdescription from overlaying page header */
 	color: #444;      /* Serves to demphasize metadata text, see also ul */
 	padding-left: 2em;
+    overflow: hidden;
+    
 }
 /* Override properties of .magnifyarea from multizoom.css */ 
 .magnifyarea {
