ISSUE: Redmine 256  PURPOSE: Style update
DESCRIPTION: Data Entry page needed some slight changes to fit on the
content area and made a few changes to attribute table size and catalog
number block.  On mediaset page I made the padding at the bottom of the
image thumbnails bigger.  Also added a few other styles.

--- a/includes/css/mediacontain.css
+++ b/includes/css/mediacontain.css
@@ -5,6 +5,7 @@
 	color: #444;      /* Serves to demphasize metadata text, see also ul */
 	padding-left: 2em;
     overflow: hidden;
+    padding-bottom: 2em;
     
 }
 /* Override properties of .magnifyarea from multizoom.css */ 
@@ -190,7 +191,7 @@ p {
 	float: left;
 	width: 98%;
 	margin: 20px 0 30px 0;
-	height: 170px;
+	height: 210px;
 	clear: both;
 }
 #mediacontain .media_thumbs h4{
