--- a/includes/style.css
+++ b/includes/style.css
@@ -2391,7 +2391,7 @@ p.topspace {margin: 0; padding: 1px 0 0 0; line-height: 5px;}
 	color: #444444;
 }
 .detailCell {
-	border: 1px dotted #ccc;
+	border: 1px dotted #666;
 	text-align: left;
 	padding: 2px 3px 0 15px;
 	position: relative;
