--- a/includes/style.css
+++ b/includes/style.css
@@ -2969,6 +2969,8 @@ A:hover {
 	text-decoration: none;
 	color: #CC0000;
 }
+a:link.underline {text-decoration: underline;
+color: #114bc7;}
 A.novisit {
 	color: blue;
 }
@@ -3839,13 +3841,13 @@ ul.pubLinks {
    
 }
 
-.basic_box::after, .basic_narrow_box::after, .basic_wide_box::after {
+/*.basic_box::after, .basic_narrow_box::after, .basic_wide_box::after {
     content: '\00a0';
     display: block;
     margin-top: 100px;
     height: 170px;
     visibility: hidden;
-}
+}*/
 .basic_search_box a.toplinks {display:inline-block; float: left; width:auto; padding-right: 1em;}
 .basic_box_media
 .basic_box_media table {width:100%;}
@@ -4580,10 +4582,10 @@ table.pubtable td { border-bottom: 1px solid gray;padding: 2px 1px;border-right:
 }
 
 .groupAgent {margin-left: 14px;margin-bottom:0;padding-bottom: 0;}
-
+/*
 .basic_box::after,.basic_narrow_box::after, .basic_wide_box::after {
   content: '\00a0'; /* &nbsp; */
-  display: block;
+ /* display: block;
   margin-top: 100px;
   height:170px;
   visibility: hidden;
@@ -4595,7 +4597,7 @@ table.pubtable td { border-bottom: 1px solid gray;padding: 2px 1px;border-right:
 .basic_box--full::after,.basic_narrow_box--full::after, .basic_wide_box--full::after {
   content: none;
 }
-iframe table
+*/
 
 @media only screen and (max-width: 1800px) {
 #headerContent {
