cast issue, footer tagline, date picker icon

--- a/includes/style.css
+++ b/includes/style.css
@@ -3839,13 +3839,13 @@ ul.pubLinks {
    
 }
 
-.basic_box::after, .basic_narrow_box::after, .basic_wide_box::after {
+/*.basic_box::after, .basic_narrow_box::after, .basic_wide_box::after {
     content: '\00a0';
     display: block;
     margin-top: 100px;
     height: 170px;
     visibility: hidden;
-}
+}*/
 .basic_search_box a.toplinks {display:inline-block; float: left; width:auto; padding-right: 1em;}
 .basic_box_media
 .basic_box_media table {width:100%;}
@@ -4581,13 +4581,13 @@ table.pubtable td { border-bottom: 1px solid gray;padding: 2px 1px;border-right:
 
 .groupAgent {margin-left: 14px;margin-bottom:0;padding-bottom: 0;}
 
-.basic_box::after,.basic_narrow_box::after, .basic_wide_box::after {
+/*.basic_box::after,.basic_narrow_box::after, .basic_wide_box::after {
   content: '\00a0'; /* &nbsp; */
-  display: block;
+ /* display: block;
   margin-top: 100px;
   height:170px;
   visibility: hidden;
-}
+}*/
 
 .basic_box--full::before,.basic_narrow_box--full::before, .basic_wide_box--full::before{
   padding: 0;
