Committing uncommitted changes found on production. Probably most where committed elsewhere.

--- a/includes/style.css
+++ b/includes/style.css
@@ -2969,6 +2969,8 @@ A:hover {
 	text-decoration: none;
 	color: #CC0000;
 }
+a:link.underline {text-decoration: underline;
+color: #114bc7;}
 A.novisit {
 	color: blue;
 }
@@ -4580,14 +4582,14 @@ table.pubtable td { border-bottom: 1px solid gray;padding: 2px 1px;border-right:
 }
 
 .groupAgent {margin-left: 14px;margin-bottom:0;padding-bottom: 0;}
-
-/*.basic_box::after,.basic_narrow_box::after, .basic_wide_box::after {
-  content: '\00a0'; /* &nbsp; */
- /* display: block;
+/*
+.basic_box::after,.basic_narrow_box::after, .basic_wide_box::after {
+  content: '\00a0'; 
+ display: block;
   margin-top: 100px;
   height:170px;
   visibility: hidden;
-}*/
+}
 
 .basic_box--full::before,.basic_narrow_box--full::before, .basic_wide_box--full::before{
   padding: 0;
@@ -4595,8 +4597,7 @@ table.pubtable td { border-bottom: 1px solid gray;padding: 2px 1px;border-right:
 .basic_box--full::after,.basic_narrow_box--full::after, .basic_wide_box--full::after {
   content: none;
 }
-iframe table
-
+*/
 @media only screen and (max-width: 1800px) {
 #headerContent {
 	width: 90%;
