--- a/includes/css/mediacontain.css
+++ b/includes/css/mediacontain.css
@@ -191,7 +191,7 @@ p {
 	float: left;
 	width: 98%;
 	margin: 20px 0 30px 0;
-	height: 210px;
+	height: auto;
 	clear: both;
 }
 #mediacontain .media_thumbs h4{
@@ -214,7 +214,7 @@ p {
 	padding-right: 8px;
 	float: left;
 	position: relative;
-	height: 190px;
+	height: auto;
 
 }
 
