--- a/includes/style.css
+++ b/includes/style.css
@@ -5352,3 +5352,10 @@ table.bottom_band {
 .nobull input {margin-top:0; padding-top:0;font-size: 14px;}
 
 /*** Above: Used for Part Attribute button and popup  ***/
+
+table.partname {border-radius: 5px;font-size: 14px;background: #ddd;margin-bottom: 1em;}
+table.partname tr:nth-child(even)  {border: none;background-color: #fff;}
+table.partname tr:nth-child(odd) {background-color: #f2f2f2; border: none;}
+table.partname th {height: 20px;background-color: #bbd6e7;font-size: 15px;}
+table.partname th.inside, table.partname td.inside {padding: 2px 8px;text-align: left;margin:0;vertical-align: middle;min-height: 20px;font-size: 15px;}
+table.partname td.partnameatts {padding-bottom: 3px;}
