--- a/includes/style.css
+++ b/includes/style.css
@@ -5359,3 +5359,32 @@ table.partname tr:nth-child(odd) {background-color: #f2f2f2; border: none;}
 table.partname th {height: 20px;background-color: #bbd6e7;font-size: 15px;}
 table.partname th.inside, table.partname td.inside {padding: 2px 8px;text-align: left;margin:0;vertical-align: middle;min-height: 20px;font-size: 15px;}
 table.partname td.partnameatts {padding-bottom: 3px;}
+.shippingBlock h3 {margin: 0 auto;}
+div#ships {width: 76em;margin: 0 auto; }
+div#ships ul.shipheaders {width:76em;float:left;display:inline;list-style-type:none;}
+div#ships ul.shipheaders li {width: 150px;font-weight: bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
+div#ships ul.shipdata {width:76em;float:left;display:inline;list-style-type:none;margin-top:0;}
+div#ships ul.shipdata li {width: 150px;font-weight: normal; float:left;display:inline;list-style-type:none;color: black;}
+div#ships ul.shipaddresseshead li {width: 575px;font-weight:bold; float:left;display:inline;list-style-type:none;color: black;margin-top:.5em;}
+div#ships ul.shipaddressesdata li {width: 575px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;margin-top:0em;padding-top:0;}
+div#ships input {margin-top: 1em;}
+div#shippermitstyle {float: left;width: 76em;margin-bottom: 1em; padding-bottom: 1em;border-bottom: 1px solid black;}
+div#shippermitstyle h4 {font-size: 16px;margin:0 auto;padding-bottom:.25em;}
+
+div#shippermitstyle ul.permitshipul {width: 800px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;padding: .25em 0;}
+div#shippermitstyle ul.permitshipul li {width: auto;margin-right: 1em;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;}
+div#shippermitstyle ul.permitshipul li input {margin-top:0;}
+div#shippermitstyle ul.permitshipul2 {width: 380px;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;padding: .25em 0;}
+div#shippermitstyle ul.permitshipul2 li {width: auto;margin-right: 1em;font-weight:normal; float:left;display:inline;list-style-type:none;color: black;}
+div#shippermitstyle ul.permitshipul2 li input {margin-top:0;}
+div#changeship {width: 76em;float:left;}
+div.shipbuttons {width: 100px;margin-right: 1em;float:left;display:inline;}
+div#accsection {width: 76em;margin: 0 auto;margin-bottom: 2em;margin-bottom: .5em;padding: 3px 0; border-bottom: 1px solid #666;}
+div#accsection h3 {margin-bottom: .5em;}
+div#accsection ul.accn li {margin: .25em 0;list-style:none;margin-bottom: 1em;}
+div#accsection ul.accn li span, div#accsection ul.accnpermit li span  {font-weight: 580;}
+div#accsection ul.accnpermit li {margin: .25em 0em;list-style:none;}
+div#permitmedia {width: 76em;margin: 0 auto;padding-bottom: 2em;}
+div#permitmedia h3 {width: 76em;margin: 0 auto;margin-bottom: .5em;padding-top: 1em;}
+div#permitmedia ul {}
+div#permitmedia ul li {margin: .25em 0;list-style:none;margin-bottom: .5em;}
